--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -146,9 +146,27 @@
   }
 }
 
+.menu_wrapper {
+  padding: 0 30px;
+  margin: 0 -30px;
+}
+
+.menu_container_fixed {
+  position: fixed;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  width: 100%;
+  margin: 0;
+  padding: 30px;
+  z-index: 999;
+  background: #fff;
+}
+
 .menu_container {
   display: flex;
   overflow: hidden;
+  background: #fff;
 
   .menu_image {
     margin: 0 12px;
