--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -203,7 +203,12 @@
 }
 
 .items_container {
-  padding: 30px 0;
+
+  padding-bottom: 30px;
+
+  .items_wrapper {
+    padding-top: 30px;
+  }
 
   .items_header {
     display: flex;
