--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -149,13 +149,13 @@
 .menu_wrapper {
   padding: 0 30px;
   margin: 0 -30px;
-  overflow: hidden;
+  overflow: auto;
   position: relative;
 }
 
 .menu_container_fixed {
   position: fixed;
-  overflow: hidden;
+  overflow: auto;
   top: 0;
   left: 0;
   width: 100%;
