--- a/app/profile/edit/page.module.scss
+++ b/app/profile/edit/page.module.scss
@@ -14,7 +14,7 @@
 	top: 0;
 	width: 100%;
 	margin: 0 -30px;
-	z-index: 100;
+	z-index: 0;
 	background: #fff;
 
 
@@ -88,11 +88,44 @@
 				outline: none;
 				color: #000;
 			}
+
+			&::placeholder {
+                color: #C1C7CC;
+            }
 		}
 
 		.form_title {
 			padding-bottom: 5px;
 		}
+
+		.select_container {
+			position: relative;
+			height: 40px;
+			border-radius: 8px;
+			background: #f2f4f5;
+			width: 100%;
+			border: none;
+			color: #c1c7cc;
+			padding: 0 15px;
+			appearance: none;
+			display: flex;
+			align-items: center;		
+
+			  &::after {
+				content: '';
+				position: absolute;
+				width: 10px; /* Adjust based on your image size */
+				height: 10px; /* Adjust based on your image size */
+				background-image: url('/next.svg');
+				background-repeat: no-repeat;
+				background-position: center;
+				background-size: cover; /* Adjust based on your preference */
+				right: 10px; /* Adjust based on your layout */
+				top: 50%; /* Adjust to align vertically */
+				transform: translateY(-50%) rotate(90deg); /* Rotate the image */
+			  }
+
+		}		
 
 		.img_input {
 			position: relative;
@@ -120,3 +153,50 @@
 		font-weight: 600;
 	}
 }
+
+.confirm {
+	margin-top: 60px;
+	height: 50px;
+	border-radius: 8px;
+	background: #59adff;
+	width: 100%;
+	color: #fff;
+	font-weight: 600;
+	font-size: 1rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+  .optionModalContent {
+	
+	position: fixed; /* Используем абсолютное позиционирование относительно вьюпорта */
+	top: 50%; /* Позиционируем верхний край элемента на середине экрана по вертикали */
+	left: 50%; /* Позиционируем левый край элемента на середине экрана по горизонтали */
+	transform: translate(-50%, -50%); /* Смещаем элемент на 50% его ширины и высоты назад, чтобы центрировать точно */
+	width: 300px; /* Задаем ширину элемента */
+	padding: 20px; /* Добавляем внутренние отступы */
+	background: white; /* Задаем фоновый цвет */
+	border-radius: 10px; /* Скругляем углы */
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Добавляем тень для визуального выделения */
+	outline: none;
+
+	h1 {
+		font-size: .75rem;
+		font-weight: 600;
+	}
+
+	.btn {
+		margin-top: 20px;
+		border-radius: 8px;
+		background: #59adff;
+		height: 50px;
+		width: 100%;
+		color: #fff;
+		font-weight: 600;
+		font-size: 1rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+  }
