--- a/app/_components/products.module.scss
+++ b/app/_components/products.module.scss
@@ -66,12 +66,14 @@
 
   .items_list {
     @include flexbox($justify: space-between);
-    padding-top: $padding-large;
-    margin: -$padding-large/2;
+    padding-top: $padding-medium;
+    margin: -$padding-medium;
+    margin-top: 0;
 
     .item {
       width: 50%;
-      padding: $padding-large/2;
+      padding: $padding-medium;
+      padding-top: 0;
       -webkit-tap-highlight-color: transparent;
       -webkit-touch-callout: none;
       user-select: none;
@@ -83,7 +85,7 @@
       }
 
       .items_description {
-        padding-top: $padding-small;
+        padding-top: $padding-xsmall;
         text-align: center;
 
         .items_price {
