--- a/app/globals.scss
+++ b/app/globals.scss
@@ -9,18 +9,9 @@ body {
   min-height: 93vh;
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: var(--font-raleway);
+  font-family: $font-manrope;
+  color: $primary;
 }
-
-/*body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}*/
 
 body {
   padding:0 30px;
@@ -32,10 +23,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
