--- a/app/profile/page.module.scss
+++ b/app/profile/page.module.scss
@@ -1,152 +1,96 @@
-
-
-.page_container {
-	min-height: inherit;
-	display: flex;
-	justify-content: space-between;
-	flex-direction: column;
+.wrapper {
+  min-height: inherit;
+  padding-top: $padding-large * 2;
 }
 
-.header_container {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 15px 30px;
-	position: fixed;
-	top: 0;
-	width: 100%;
-	margin: 0 -30px;
-	z-index: 100;
-	background: #fff;
-
-
-	.header_title {
-		font-size: 1rem;
-		font-weight: 600;
-		width: 100%;
-		text-align: center;
-	}
+.page {
+  min-height: inherit;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
-.profile_container {
+.profile {
+  @include flexbox($justify: space-between);
+  padding-top: $padding-large;
 
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding-top: 90px;
+  &_info {
+    display: flex;
+    align-items: center;
+  }
 
-	.profile_info {
-		display: flex;
-		align-items: center;
+  &_title {
+    padding-left: $padding-large;
+    font-size: $font-size-medium;
+    color: $secondary;
 
-		.profile_title {
-			padding-left: 20px;
+    h1 {
+      @include text-header($font-size: $font-size-large);
+    }
+  }
 
-			h1 {
-				font-size: 24px;
-				font-weight: 600;
-			}
-
-			p {
-				font-size: 1rem;
-				color: #989ba5;
-			}
-		}
-
-		.profile_avatar {
-			border-radius: 100%;
-		}
-
-	}
+  &_avatar {
+    border-radius: $radius-full;
+  }
 }
 
-.orders_container {
-	padding-top: 30px;
-	margin-bottom: -30px;
+.orders {
+  padding-top: $padding-large;
 
-	h1 {
-		font-size: 1rem;
-		font-weight: 600;
-		padding-bottom: 30px;
-	}
+  h1 {
+    @include text-header;
+    padding-bottom: $padding-large;
+  }
 
-	.order_container {
-		display: flex;
-		align-items: center;
-	}
+  .item {
+    @include flexbox($justify: space-between);
+    margin-bottom: $padding-large;
+    padding-right: $padding-medium;
+    border-radius: $radius-medium;
 
-	.order {
-		display: flex;
-		align-items: center;
-		margin-bottom: 30px;
-		justify-content: space-between;
+    &_main {
+      @include flexbox;
+    }
 
-		.order_img {
-			border-radius: 10px;
-			background: #f2f4f5;
-		}
+    &_img {
+      border-radius: $radius-medium;
+      background: $secondary-light;
+    }
 
-		.order_detail {
-			margin-right: 20px;
-			display: none;
-		}
+    &_description {
+      padding-left: $padding-medium;
+      color: $secondary;
+    }
 
-		.order_description {
-			padding-left: 20px;
-			color: #989ba5;
-			
-			.order_info {
+    &_info {
+      @include flexbox($justify: star);
+    }
 
-				display: flex;
-				align-items: center;
+    &_point {
+      @include point;
+    }
 
-				.order_point {
-					display: inline-block;
-					width: 5px;
-					height: 5px;
-					background: #989ba5;
-					border-radius: 5px;
-					margin: 0 8px;
-				}
-			}
+    &_title {
+      @include text-header($color: $accent, $font-size: $font-size-small);
+      padding-bottom: $padding-small;
+    }
+  }
 
-
-			.order_title {
-				font-weight: 600;
-				color: #59adff;
-				padding-bottom: 10px;
-				font-size: 0.9rem;
-			}
-		}
-	}
-
-
-	.active {
-		border-radius: 10px;
-		background: linear-gradient(225deg, #f2f4f5 0%, #cfe7ff 100%);
-
-		.order_img {
-			background: none;
-		}
-
-		.order_detail {
-			margin-right: 20px;
-			display: block;
-		}
-	}
-
+  .active {
+    background: $background-gradient-blue;
+    .order_img {
+      background: none;
+    }
+  }
 }
 
-.exit_container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	margin-bottom: 30px;
+.exit {
+  @include flexbox;
+  margin-bottom: $padding-large;
+  color: $accent;
+  font-weight: $font-weight-bold;
 
-	color: #59adff;
-	font-weight: 600;
-
-	.exit_text {
-		padding-left: 5px;
-	}
+  span {
+    padding-left: $padding-small;
+  }
 }
