--- a/app/_components/products.module.scss
+++ b/app/_components/products.module.scss
@@ -81,7 +81,7 @@
       .image {
         @include image;
         border-radius: $radius-medium;
-        background: $background-gradient-green;
+        background: $background-grey;
       }
 
       .items_description {
